# Crypto-Bot-AI

./: .gitignore  .irlSim.py.swp  .performance_track.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  bot.cpp  btc_data10days.csv  btc_data20days.csv  btc_data7days.csv  btc_data_1week.csv  cmake_install.cmake  cryptoai.py  dataGrapper  dataGrapper.cpp  irlSim.py  lstm_model.h5  lstm_model_with_features.h5  lstm_model_with_indicators.h5  ltsm.py  ltsmPredict.py.py  ltsmUpdated.py  orderLtsm.py  pastPaperTrading.py  performance_track.txt  xgb_model.json  xgboost_advanced.py  xgboost_bigData.py
data/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dataGrapper  dataGrapper.cpp
